<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_20"
    tools:context=".ui.setting.UserSettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60"
        android:background="@color/title_bg_gray">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_setting_nikename"
            android:textColor="@color/black_deep"
            android:textSize="@dimen/dp_28" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_setting_xing"
            android:textColor="@color/black_deep"
            android:textSize="@dimen/dp_28" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_setting_ming"
            android:textColor="@color/black_deep"
            android:textSize="@dimen/dp_28" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_setting_num"
            android:textColor="@color/black_deep"
            android:textSize="@dimen/dp_28" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_setting_job"
            android:textColor="@color/black_deep"
            android:textSize="@dimen/dp_28" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_setting_dept"
            android:textColor="@color/black_deep"
            android:textSize="@dimen/dp_28" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_setting_permission"
            android:textColor="@color/black_deep"
            android:textSize="@dimen/dp_28" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_setting_disc"
            android:textColor="@color/black_deep"
            android:textSize="@dimen/dp_28" />

        <TextView
            android:layout_width="@dimen/dp_300"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/user_setting_opt"
            android:textColor="@color/black_deep"
            android:textSize="@dimen/dp_28" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tv_add_user"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dimen_60"
        android:layout_marginTop="@dimen/dimen_50"
        android:background="@color/blue"
        android:gravity="center"
        android:text="添加新用户"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_30" />


</LinearLayout>