<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_80"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_50" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_20"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_200"
            android:background="@mipmap/login_logo" />


        <LinearLayout
            android:layout_width="@dimen/dp_500"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_50"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textSize="@dimen/dimen_25" />

            <EditText
                android:id="@+id/et_psd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_50"
                android:hint="@string/password"
                android:textSize="@dimen/dimen_25" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/dimen_50"
                android:background="@color/green"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_30" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_90"
                android:layout_marginTop="@dimen/dimen_30">

                <TextView
                    android:id="@+id/tv_forget_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/forget_name"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/dimen_20" />

                <TextView
                    android:id="@+id/tv_forget_psd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:text="@string/forget_psd"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/dimen_20" />


            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_50">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="@color/statusbar_black"
            android:textSize="@dimen/dimen_20" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:text="1.0.0"
            android:textColor="@color/statusbar_black"
            android:textSize="@dimen/dimen_20" />

    </LinearLayout>


</LinearLayout>