<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_339"
    android:layout_height="wrap_content"
    android:background="@color/gray_bg"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/main_menu_user" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:text="@string/main_menu_user"
            android:textSize="@dimen/dimen_23" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_file"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/main_menu_file" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:text="@string/main_menu_file"
            android:textSize="@dimen/dimen_23" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_upload"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/main_menu_upload" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:text="@string/main_menu_upload"
            android:textSize="@dimen/dimen_23" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_log"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/main_menu_log" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:text="@string/main_menu_log"
            android:textSize="@dimen/dimen_23" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_laguage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/main_menu_language" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:text="@string/main_menu_language"
            android:textSize="@dimen/dimen_23" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_newer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/main_menu_newer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:text="@string/main_menu_newer"
            android:textSize="@dimen/dimen_23" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/main_menu_about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:text="@string/main_menu_about"
            android:textSize="@dimen/dimen_23" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/main_menu_logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:text="@string/main_menu_logout"
            android:textSize="@dimen/dimen_23" />

    </LinearLayout>


</LinearLayout>