<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_deep" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_status"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_20" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已连接"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_20" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_type"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_20" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已连接"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_20" />


        </LinearLayout>

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black_deep" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_name"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_20" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已连接"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_20" />


        </LinearLayout>
        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black_deep" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_temp"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_20" />

            <TextView
                android:id="@+id/tv_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已连接"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_20" />


        </LinearLayout>
        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black_deep" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_pressure"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_20" />

            <TextView
                android:id="@+id/tv_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已连接"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_20" />


        </LinearLayout>
        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black_deep" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_process"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_20" />

            <TextView
                android:id="@+id/tv_process"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已连接"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_20" />


        </LinearLayout>
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>